[gd_scene load_steps=3 format=3 uid="uid://b6qibk2bpsyd7"]

[ext_resource type="Script" uid="uid://buidjlwx6lqaf" path="res://ui/hideout/map_selection_menu.gd" id="1_i65wc"]
[ext_resource type="PackedScene" uid="uid://bj6g0500uiwnr" path="res://ui/hideout/level_card.tscn" id="1_pg2p0"]

[node name="MapSelectionMenu" type="MarginContainer" groups=["has_on_died_function", "has_on_extracted_function"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i65wc")
level_card_scene = ExtResource("1_pg2p0")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviousLevelFullContainer" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/PreviousLevelFullContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "RETURN TO PREVIOUS MAP"
horizontal_alignment = 1
uppercase = true

[node name="PreviousLevelCardContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer/PreviousLevelFullContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LevelCard" parent="Panel/ScrollContainer/VBoxContainer/PreviousLevelFullContainer/PreviousLevelCardContainer" instance=ExtResource("1_pg2p0")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/ScrollContainer/VBoxContainer/PreviousLevelFullContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "NEW MAP"
horizontal_alignment = 1
uppercase = true

[node name="LevelCardContainer" type="FlowContainer" parent="Panel/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="LevelCard" parent="Panel/ScrollContainer/VBoxContainer/LevelCardContainer" instance=ExtResource("1_pg2p0")]
layout_mode = 2

[node name="LevelCard2" parent="Panel/ScrollContainer/VBoxContainer/LevelCardContainer" instance=ExtResource("1_pg2p0")]
layout_mode = 2

[node name="LevelCard3" parent="Panel/ScrollContainer/VBoxContainer/LevelCardContainer" instance=ExtResource("1_pg2p0")]
layout_mode = 2
